race-timer-api/k8s_sonet/base/NamespaceDefinition.yml
# k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: race-timer
