race-timer-api/k8s_sonet/base/RaceTimerApiService.yml
# k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: race-timer-api
  namespace: race-timer
spec:
  selector:
    app: race-timer-api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
