race-timer-api/k8s_sonet/base/RaceTimerClientService.yml
# k8s/client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: race-timer-client
  namespace: race-timer
spec:
  selector:
    app: race-timer-client
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
